--- a/index.html
+++ b/index.html
@@ -77,3 +77,7 @@ clearTimeout(timeout);
 delay(document.getElementById('001'), function() {ga('send','event','年終促銷','滑鼠游標指向','for 秋季專屬','50')});
 
 </script>
+
+</body>
+
+</html>
